# rd60xx

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: test_run.py
src/rd60xx/: __init__.py  rd60xx.py
